--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,11 +1,17 @@
 <div class="container"
-    fxLayout="row"
+    fxLayout="row wrap"
     fxLayout.sm="column"
     fxLayout.xs="column"
     fxLayoutAlign.gt-md="space-around center"
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
+  <div fxFlex="100">
+    <div>
+      <h3>{{dish.name | uppercase}}</h3>
+      <hr>
+    </div>
+  </div>
   <div fxFlex="40">
      <div fxFlex *ngIf="dish">
     <mat-card>
@@ -20,15 +26,16 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
   </div>
   </div>
-  <div fxFlex="40">
+  <div fxFlex="40" *ngIf="dish">
     <h2> Comments</h2>
-    <mat-list *ngFor="let com of comments">
+    <mat-list *ngFor="let com of dish.comments">
 
       <mat-list-item >
         <h4>
@@ -38,7 +45,7 @@
 
       <mat-list-item>
         <p>
-          <span matLine>{{com.rating}} stars</span>
+          <span matLine>{{com.rating}} Stars</span>
         </p>
       </mat-list-item>
 
